Changed the check for URI to URL per the spec. Also removed duplicate entry in the lookFor list.